--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -10,7 +10,9 @@
    "source": [
     "# Scalable Geospatial (Vector) Data Science\n",
     "\n",
-    "### Nikolai Janakiev [@njanakiev](https://github.com/njanakiev)"
+    "### Nikolai Janakiev [@njanakiev](https://github.com/njanakiev)\n",
+    "\n",
+    "- Slides - [janakiev.com/scalable-geospatial-data-science](https://janakiev.com/scalable-geospatial-data-science)"
    ]
   },
   {
@@ -114,7 +116,7 @@
     }
    },
    "source": [
-    "# Scaling Postgres"
+    "# Scaling PostgreSQL"
    ]
   },
   {
@@ -209,7 +211,18 @@
     }
    },
    "source": [
-    "- __2006__ Apache Nuts - Hadoop"
+    "- __2006__ Apache Nutch - Hadoop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- __2007__ Used by Facebook, LinkedIn, Twitter, among others"
    ]
   },
   {
@@ -308,18 +321,22 @@
     }
    },
    "source": [
-    "# GeoMesa\n",
+    "# GeoMesa ([geomesa.org](https://www.geomesa.org/))\n",
     "\n",
-    "[geomesa.org](https://www.geomesa.org/)"
+    "- [LocationTech](https://locationtech.org) under the Eclipse Foundation"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "### Spatial Indexing\n",
     "\n",
-    "- 2d/3d Space Filling Curve"
+    "- Space Filling Curve (2d/3d) - [Index Overview](https://www.geomesa.org/documentation/user/datastores/index_overview.html)"
    ]
   },
   {
@@ -341,57 +358,14 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "source": [
-    "# LocationTech\n",
+    "### Integrations\n",
     "\n",
-    "[projects.eclipse.org/projects/locationtech](https://projects.eclipse.org/projects/locationtech)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "- [GeoWave](https://locationtech.github.io/geowave/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "- [GeoTrellis](https://geotrellis.io/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "- [RasterFrames](https://rasterframes.io/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "- [JTS Topology Suite](https://locationtech.github.io/jts/)"
+    "- Apache Spark\n",
+    "- GeoServer Integration"
    ]
   },
   {
@@ -413,9 +387,7 @@
     }
    },
    "source": [
-    "# Presto\n",
-    "\n",
-    "[prestodb.io](https://prestodb.io/)\n",
+    "# Presto ([prestodb.io](https://prestodb.io/))\n",
     "\n",
     "- Distributed SQL Query Engine for Big Data"
    ]
@@ -450,11 +422,9 @@
     }
    },
    "source": [
-    "# Dask\n",
+    "# Dask ([dask.org](https://dask.org/))\n",
     "\n",
-    "[dask.org](https://dask.org/)\n",
-    "\n",
-    "- parallel and distributed computing library for analytics written in Python"
+    "- Parallel and distributed computing library for analytics written in Python"
    ]
   },
   {
@@ -465,11 +435,9 @@
     }
    },
    "source": [
-    "# GeoPandas\n",
+    "# GeoPandas ([geopandas.org](https://geopandas.org/))\n",
     "\n",
-    "[geopandas.org](https://geopandas.org/)\n",
-    "\n",
-    "-  xtends the datatypes used by pandas to allow spatial operations on geometric types"
+    "- Extends the datatypes used by [Pandas](https://pandas.pydata.org/) to allow spatial operations on geometric types"
    ]
   },
   {
@@ -480,7 +448,7 @@
     }
    },
    "source": [
-    "# ElasticSearch"
+    "# ElasticSearch ([elastic.co](https://www.elastic.co/))"
    ]
   },
   {
@@ -491,9 +459,7 @@
     }
    },
    "source": [
-    "### Geo Point Indexing\n",
-    "\n",
-    "[Geo-point datatype](https://www.elastic.co/guide/en/elasticsearch/reference/current/geo-point.html)\n",
+    "### [Geo Point Indexing](https://www.elastic.co/guide/en/elasticsearch/reference/current/geo-point.html)\n",
     "\n",
     "- BKD-trees\n",
     "- 2019 - [BKD-backed geo_shapes in Elasticsearch: precision + efficiency + speed](https://www.elastic.co/blog/bkd-backed-geo-shapes-in-elasticsearch-precision-efficiency-speed)"
@@ -507,9 +473,7 @@
     }
    },
    "source": [
-    "### Geo Queries\n",
-    "\n",
-    "[ElasticSearch - Geo queries](https://www.elastic.co/guide/en/elasticsearch/reference/current/geo-queries.html)\n",
+    "### [Geo queries](https://www.elastic.co/guide/en/elasticsearch/reference/current/geo-queries.html)\n",
     "\n",
     "- `geo_bounding_box` query\n",
     "- `geo_distance` query\n",
@@ -525,10 +489,9 @@
     }
    },
    "source": [
-    "# MongoDB\n",
+    "# MongoDB ([mongodb.com](https://www.mongodb.com/))\n",
     "\n",
-    "- [mongodb.com](https://www.mongodb.com/)\n",
-    "- Supports [GeoJSON Object](https://docs.mongodb.com/manual/reference/geojson/)"
+    "- Document-oriented NoSQL database which uses JSON-like documents with optional schemas"
    ]
   },
   {
@@ -541,6 +504,7 @@
    "source": [
     "### Geospatial Index\n",
     "\n",
+    "- [GeoJSON Object](https://docs.mongodb.com/manual/reference/geojson/)\n",
     "- [2d Index](https://docs.mongodb.com/manual/core/2d/), [2d Index Internals](https://docs.mongodb.com/manual/core/geospatial-indexes/) - Uses GeoHash Indexing\n",
     "- [2d Sphere Index](https://docs.mongodb.com/manual/core/2dsphere/)\n",
     "- [geoHaystack Indexes](https://docs.mongodb.com/manual/core/geohaystack/) - Special index that is optimized to return results over small areas"
@@ -554,15 +518,13 @@
     }
    },
    "source": [
-    "### Geospatial Queries\n",
+    "### [Geospatial Queries](https://docs.mongodb.com/manual/geospatial-queries/)\n",
     "\n",
     "- `$geoIntersects`\n",
     "- `$geoWithin`\n",
     "- `$near`\n",
     "- `$nearSphere`\n",
-    "- `$geoNear`\n",
-    "\n",
-    "[Geospatial Queries](https://docs.mongodb.com/manual/geospatial-queries/)"
+    "- `$geoNear`"
    ]
   },
   {
@@ -573,9 +535,9 @@
     }
    },
    "source": [
-    "# Redis\n",
+    "# Redis ([redis.io](https://redis.io/))\n",
     "\n",
-    "[redis.io](https://redis.io/)"
+    "- in-memory data structure store, used as a database, cache and message broker"
    ]
   },
   {
@@ -586,8 +548,8 @@
     }
    },
    "source": [
-    "- in-memory data structure store, used as a database, cache and message broker\n",
-    "- Lyft 10 million QPS\n",
+    "### Geospatial Indexing\n",
+    "\n",
     "- [Geohash](https://en.wikipedia.org/wiki/Geohash) Indexing"
    ]
   },
@@ -599,15 +561,12 @@
     }
    },
    "source": [
-    "### Geospatial Commands\n",
-    "\n",
+    "### [Geospatial Commands](https://redislabs.com/redis-best-practices/indexing-patterns/geospatial/)\n",
     "- [GEOADD](https://redis.io/commands/geoadd)\n",
     "- [GEOHASH](https://redis.io/commands/geohash)\n",
     "- [GEODIST](https://redis.io/commands/geodist)\n",
     "- [GEORADIUS](https://redis.io/commands/georadius)\n",
-    "- [GEORADIUSBYMEMBER](https://redis.io/commands/georadiusbymember)\n",
-    "\n",
-    "[Redis Best Practices - Geospatial](https://redislabs.com/redis-best-practices/indexing-patterns/geospatial/)"
+    "- [GEORADIUSBYMEMBER](https://redis.io/commands/georadiusbymember)"
    ]
   },
   {
@@ -624,7 +583,7 @@
     "\n",
     "- Slides - [janakiev.com/scalable-geospatial-data-science](https://janakiev.com/scalable-geospatial-data-science)\n",
     "- Benchmark (2017) - [Benchmarking of Big Data Technologies for Ingesting and Querying Geospatial Datasets](https://www.reply.com/en/topics/big-data-and-analytics/Shared%20Documents/DSTL-Report-Data-Reply-2017.pdf)\n",
-    "- MDPI 2020 - [State-of-the-Art Geospatial Information Processing inNoSQL Databases](https://www.mdpi.com/2220-9964/9/5/331/pdf)\n",
+    "- MDPI 2020 - [State-of-the-Art Geospatial Information Processing in NoSQL Databases](https://www.mdpi.com/2220-9964/9/5/331/pdf)\n",
     "- [Summary of the 1.1 Billion Taxi Rides Benchmarks](https://tech.marksblogg.com/benchmarks.html)"
    ]
   }
