--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -105,7 +105,7 @@
     "### PostGIS Parallelization\n",
     "\n",
     "- With tweaks since __PostgreSQL 11__ and __PostGIS 2.5__ \n",
-    "- Out of the box since __Postgres 12__ and __PostGIS 3__"
+    "- Out of the box since __PostgreSQL 12__ and __PostGIS 3__"
    ]
   },
   {
@@ -174,18 +174,18 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
-    "# Big Data"
+    "# Apache Hadoop"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -229,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -244,7 +244,7 @@
     }
    },
    "source": [
-    "## Hadoop Distributed File System (HDFS)"
+    "# Apache Hadoop"
    ]
   },
   {
@@ -255,7 +255,9 @@
     }
    },
    "source": [
-    "## Hadoop MapReduce"
+    "### Hadoop Distributed File System (HDFS)\n",
+    "\n",
+    "- __2003__ Google - [The Google File System](https://static.googleusercontent.com/media/research.google.com/en//archive/gfs-sosp2003.pdf)"
    ]
   },
   {
@@ -266,7 +268,20 @@
     }
    },
    "source": [
-    "## Hadoop YARN"
+    "### Hadoop MapReduce\n",
+    "\n",
+    "- __2004__ Google - [MapReduce: Simplified Data Processing on Large Clusters](https://static.usenix.org/publications/library/proceedings/osdi04/tech/full_papers/dean/dean.pdf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "### Hadoop YARN"
    ]
   },
   {
@@ -364,7 +379,7 @@
    "source": [
     "### Integrations\n",
     "\n",
-    "- Apache Spark\n",
+    "- [Apache Spark](http://spark.apache.org/) RDD/SQL Interface\n",
     "- GeoServer Integration"
    ]
   },
@@ -411,7 +426,7 @@
     }
    },
    "source": [
-    "- [Geospatial Functions](https://prestodb.io/docs/current/functions/geospatial.html) - various common `ST_` functions available "
+    "- [Geospatial Functions](https://prestodb.io/docs/current/functions/geospatial.html) - various common `ST_` functions available, uses __RTree__ indexing [Issue #13079](https://github.com/prestodb/presto/pull/13079) for spatial joins"
    ]
   },
   {
@@ -444,6 +459,28 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- [rtree](https://github.com/Toblerity/rtree) - Spatial index for Python GIS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- (Experimental) [dask-geopandas](https://github.com/jsignell/dask-geopandas) - New implementation of geopandas and dask "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -461,8 +498,7 @@
    "source": [
     "### [Geo Point Indexing](https://www.elastic.co/guide/en/elasticsearch/reference/current/geo-point.html)\n",
     "\n",
-    "- BKD-trees\n",
-    "- 2019 - [BKD-backed geo_shapes in Elasticsearch: precision + efficiency + speed](https://www.elastic.co/blog/bkd-backed-geo-shapes-in-elasticsearch-precision-efficiency-speed)"
+    "- BKD-trees - [BKD-backed geo_shapes in Elasticsearch: precision + efficiency + speed](https://www.elastic.co/blog/bkd-backed-geo-shapes-in-elasticsearch-precision-efficiency-speed) (2019)"
    ]
   },
   {
