--- a/presto-pyhive.ipynb
+++ b/presto-pyhive.ipynb
@@ -129,21 +129,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with hive.connect(host='localhost', port=10000, database='default') as connection:\n",
-    "    cursor = connection.cursor()\n",
-    "    cursor.execute(\"SELECT * FROM gdelt_csv_2020 LIMIT 10\")\n",
-    "    \n",
-    "    items = cursor.fetchall()\n",
-    "    columns = [v[0] for v in cursor.description]\n",
-    "    df = pd.DataFrame(items, columns=columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -171,7 +156,22 @@
     }
    ],
    "source": [
+    "with hive.connect(host='localhost', port=10000, database='default') as connection:\n",
+    "    cursor = connection.cursor()\n",
+    "    cursor.execute(\"SELECT * FROM gdelt_csv_2020 LIMIT 10\")\n",
+    "    \n",
+    "    items = cursor.fetchall()\n",
+    "    columns = [v[0] for v in cursor.description]\n",
+    "    df = pd.DataFrame(items, columns=columns)\n",
+    "\n",
     "df.info(memory_usage='deep')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using SQLAlchemy"
    ]
   },
   {
