--- a/presto.ipynb
+++ b/presto.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "('1.0.5', '0.8.0', '0.7.0')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,19 +130,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FINISHED in 3520 ms\n",
+      "FINISHED in 4066 ms\n",
       "num nodes : 3\n",
-      "Query : 20200921_090251_00025_vw22n\n",
+      "Query : 20201010_135025_00068_vw22n\n",
       "Splits : 17 / 17\n",
-      "CPU times: user 34.4 ms, sys: 3.82 ms, total: 38.3 ms\n",
-      "Wall time: 3.54 s\n"
+      "CPU times: user 56 ms, sys: 342 µs, total: 56.4 ms\n",
+      "Wall time: 4.12 s\n"
      ]
     },
     {
@@ -183,7 +183,7 @@
        "0  24330238"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,6 +196,84 @@
     "\"\"\"\n",
     "\n",
     "run_query(query, **PRESTO_CONNECTION)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "query = \"\"\"\n",
+    "  EXPLAIN ANALYZE SELECT COUNT(event_id) AS cnt \n",
+    "  FROM gdelt_parquet_inserted_2020\n",
+    "\"\"\"\n",
+    "\n",
+    "with prestodb.dbapi.connect(**PRESTO_CONNECTION) as connection:\n",
+    "    cursor = connection.cursor()\n",
+    "    cursor.execute(query)\n",
+    "    items = cursor.fetchall()\n",
+    "    print(items[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fragment 1 [SINGLE]\n",
+      "    CPU: 24.87ms, Scheduled: 490.57ms, Input: 110 rows (990B); per task: avg.: 110.00 std.dev.: 0.00, Output: 10 rows (90B)\n",
+      "    Output layout: [event_id]\n",
+      "    Output partitioning: SINGLE []\n",
+      "    Stage Execution Strategy: UNGROUPED_EXECUTION\n",
+      "    - Limit[10] => [event_id:bigint]\n",
+      "            CPU: 1.00ms (0.05%), Scheduled: 37.00ms (0.12%), Output: 10 rows (90B)\n",
+      "            Input avg.: 11.00 rows, Input std.dev.: 0.00%\n",
+      "        - LocalExchange[SINGLE] () => [event_id:bigint]\n",
+      "                CPU: 10.00ms (0.50%), Scheduled: 131.00ms (0.41%), Output: 11 rows (99B)\n",
+      "                Input avg.: 6.88 rows, Input std.dev.: 291.95%\n",
+      "            - RemoteSource[2] => [event_id:bigint]\n",
+      "                    CPU: 4.00ms (0.20%), Scheduled: 19.00ms (0.06%), Output: 110 rows (990B)\n",
+      "                    Input avg.: 6.88 rows, Input std.dev.: 291.95%\n",
+      "\n",
+      "Fragment 2 [SOURCE]\n",
+      "    CPU: 1.99s, Scheduled: 23.11s, Input: 285 rows (2.50kB); per task: avg.: 95.00 std.dev.: 61.64, Output: 190 rows (1.67kB)\n",
+      "    Output layout: [event_id]\n",
+      "    Output partitioning: SINGLE []\n",
+      "    Stage Execution Strategy: UNGROUPED_EXECUTION\n",
+      "    - LimitPartial[10] => [event_id:bigint]\n",
+      "            CPU: 17.00ms (0.86%), Scheduled: 75.00ms (0.23%), Output: 190 rows (1.67kB)\n",
+      "            Input avg.: 3.28 rows, Input std.dev.: 189.18%\n",
+      "        - TableScan[TableHandle {connectorId='hive', connectorHandle='HiveTableHandle{schemaName=default, tableName=gdelt_parquet_inserted_2020, analyzePartitionValues=Optional.empty}', layout='Optional[default.gdelt_parquet_inserted_2020{}]'}, grouped = false] => [event_id:bigint]\n",
+      "                CPU: 1.95s (98.38%), Scheduled: 31.87s (99.18%), Output: 285 rows (2.50kB)\n",
+      "                Input avg.: 3.28 rows, Input std.dev.: 189.18%\n",
+      "                LAYOUT: default.gdelt_parquet_inserted_2020{}\n",
+      "                event_id := event_id:bigint:0:REGULAR\n",
+      "                Input: 285 rows (2.50kB), Filtered: 0.00%\n",
+      "\n",
+      "\n",
+      "CPU times: user 33.2 ms, sys: 5.03 ms, total: 38.3 ms\n",
+      "Wall time: 8.7 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "query = \"\"\"\n",
+    "  EXPLAIN ANALYZE SELECT event_id\n",
+    "  FROM gdelt_parquet_inserted_2020 LIMIT 10\n",
+    "\"\"\"\n",
+    "\n",
+    "with prestodb.dbapi.connect(**PRESTO_CONNECTION) as connection:\n",
+    "    cursor = connection.cursor()\n",
+    "    cursor.execute(query)\n",
+    "    items = cursor.fetchall()\n",
+    "    print(items[0][0])"
    ]
   },
   {
